idk what happening

--- a/style.css
+++ b/style.css
@@ -1101,4 +1101,84 @@ body.unlocked .cta{
 .work-title{
   font-size: clamp(1.15rem, 1.4vw, 1.35rem);
   letter-spacing: .08em;
-  m
+  margin-bottom: 12px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
